--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^11.16.0",
     "next": "^14.2.22",
     "next-themes": "0.0.10",
     "react": "^18.3.1",
