--- a/package.json
+++ b/package.json
@@ -3,24 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "framer-motion": "^11.16.0",
-    "next": "^14.2.22",
+    "next": "15.1.4",
     "next-themes": "0.0.10",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-icons": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
+    "@types/react": "19.0.3",
     "autoprefixer": "^10.2.4",
     "postcss": "^8.2.4",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.5.2"
+  },
+  "overrides": {
+    "@types/react": "19.0.3"
   }
 }
