--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "test": "playwright test"
+    "test": "playwright test",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "framer-motion": "^11.16.0",
@@ -21,6 +22,7 @@
     "@types/node": "^14.14.22",
     "@types/react": "19.0.3",
     "autoprefixer": "^10.2.4",
+    "cypress": "^13.17.0",
     "postcss": "^8.2.4",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.5.2"
