--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "test": "playwright test",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "dotenv": "^16.4.7",
@@ -22,12 +26,21 @@
     "react-icons": "^4.1.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.3",
     "@playwright/test": "^1.49.1",
+    "@storybook/addon-essentials": "^8.5.0",
+    "@storybook/addon-interactions": "^8.5.0",
+    "@storybook/addon-onboarding": "^8.5.0",
+    "@storybook/blocks": "^8.5.0",
+    "@storybook/nextjs": "^8.5.0",
+    "@storybook/react": "^8.5.0",
+    "@storybook/test": "^8.5.0",
     "@types/node": "^14.14.22",
     "@types/react": "19.0.3",
     "autoprefixer": "^10.2.4",
     "cypress": "^13.17.0",
     "postcss": "^8.2.4",
+    "storybook": "^8.5.0",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.5.2"
   },
