--- a/storybook-static/project.json
+++ b/storybook-static/project.json
@@ -1,1 +1,38 @@
-{"generatedAt":1736971006518,"hasCustomBabel":false,"hasCustomWebpack":false,"hasStaticDirs":true,"hasStorybookEslint":false,"refCount":0,"metaFramework":{"name":"Next","packageName":"next","version":"15.1.4"},"testPackages":{"@playwright/test":"1.49.1","cypress":"13.17.0"},"hasRouterPackage":true,"packageManager":{"type":"npm","version":"10.9.0"},"preview":{"usesGlobals":false},"framework":{"name":"@storybook/nextjs","options":{}},"builder":"@storybook/builder-webpack5","renderer":"@storybook/react","portableStoriesFileCount":0,"applicationFileCount":15,"storybookVersion":"8.5.0","storybookVersionSpecifier":"^8.5.0","language":"typescript","storybookPackages":{"@storybook/blocks":{"version":"8.5.0"},"@storybook/nextjs":{"version":"8.5.0"},"@storybook/react":{"version":"8.5.0"},"@storybook/test":{"version":"8.5.0"},"storybook":{"version":"8.5.0"}},"addons":{"@storybook/addon-onboarding":{"version":"8.5.0"},"@storybook/addon-essentials":{"version":"8.5.0"},"@chromatic-com/storybook":{"version":"3.2.3"},"@storybook/addon-interactions":{"version":"8.5.0"}}}
+{
+  "generatedAt": 1736971006518,
+  "hasCustomBabel": false,
+  "hasCustomWebpack": false,
+  "hasStaticDirs": true,
+  "hasStorybookEslint": false,
+  "refCount": 0,
+  "metaFramework": {
+    "name": "Next",
+    "packageName": "next",
+    "version": "15.1.4"
+  },
+  "testPackages": { "@playwright/test": "1.49.1", "cypress": "13.17.0" },
+  "hasRouterPackage": true,
+  "packageManager": { "type": "npm", "version": "10.9.0" },
+  "preview": { "usesGlobals": false },
+  "framework": { "name": "@storybook/nextjs", "options": {} },
+  "builder": "@storybook/builder-webpack5",
+  "renderer": "@storybook/react",
+  "portableStoriesFileCount": 0,
+  "applicationFileCount": 15,
+  "storybookVersion": "8.5.0",
+  "storybookVersionSpecifier": "^8.5.0",
+  "language": "typescript",
+  "storybookPackages": {
+    "@storybook/blocks": { "version": "8.5.0" },
+    "@storybook/nextjs": { "version": "8.5.0" },
+    "@storybook/react": { "version": "8.5.0" },
+    "@storybook/test": { "version": "8.5.0" },
+    "storybook": { "version": "8.5.0" }
+  },
+  "addons": {
+    "@storybook/addon-onboarding": { "version": "8.5.0" },
+    "@storybook/addon-essentials": { "version": "8.5.0" },
+    "@chromatic-com/storybook": { "version": "3.2.3" },
+    "@storybook/addon-interactions": { "version": "8.5.0" }
+  }
+}
