--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "build-storybook": "storybook build",
     "lint": "next lint",
     "format": "prettier --write .",
-    "type-check": "tsc -b"
+    "type-check": "tsc -b",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "eslint-config-next": "^15.1.4",
     "framer-motion": "^11.16.0",
     "mongoose": "^8.9.4",
     "next": "15.1.4",
@@ -41,6 +43,7 @@
     "@typescript-eslint/parser": "^8.20.0",
     "autoprefixer": "^10.2.4",
     "cypress": "^13.17.0",
+    "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-playwright": "^2.1.0",
