fixing lint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     ],
     "plugins": ["simple-import-sort"],
     "rules": {
+    "unicorn/prefer-logical-operator-over-ternary": "off",
       "simple-import-sort/exports": "error",
       "simple-import-sort/imports": "error",
       "unicorn/no-array-callback-reference": "off",
