--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "test": "playwright test",
+    "test": "vitest --reporter=verbose",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "storybook": "storybook dev -p 6006",
@@ -18,10 +18,10 @@
     "prepare": "husky install"
   },
   "config": {
-  "commitizen": {
-    "path": "cz-conventional-changelog"
-  }
-},
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
   "dependencies": {
     "dotenv": "^16.4.7",
     "eslint-config-next": "^15.1.4",
@@ -38,7 +38,6 @@
     "@chromatic-com/storybook": "^3.2.3",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@playwright/test": "^1.49.1",
     "@storybook/addon-essentials": "^8.5.0",
     "@storybook/addon-interactions": "^8.5.0",
     "@storybook/addon-onboarding": "^8.5.0",
@@ -46,9 +45,15 @@
     "@storybook/nextjs": "^8.5.0",
     "@storybook/react": "^8.5.0",
     "@storybook/test": "^8.5.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.0",
     "@types/node": "^14.14.22",
-    "@types/react": "19.0.3",
+    "@types/react": "^19.0.3",
+    "@types/react-dom": "^19.0.3",
     "@typescript-eslint/parser": "^8.20.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.2.4",
     "commitizen": "^4.3.1",
     "cypress": "^13.17.0",
@@ -56,17 +61,19 @@
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-playwright": "^2.1.0",
     "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unicorn": "^56.0.1",
+    "happy-dom": "^16.6.0",
     "husky": "^8.0.0",
     "postcss": "^8.2.4",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.10",
     "storybook": "^8.5.0",
     "tailwindcss": "^2.0.2",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.0"
   },
   "overrides": {
     "@types/react": "19.0.3"
