--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.471.1",
     "mongoose": "^8.9.4",
     "next": "15.1.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "0.0.10",
     "pg": "^8.13.1",
     "react": "19.0.0",
