--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,13 @@
   "short_name": "Portfolio",
   "theme_color": "#ff8c00",
   "background_color": "#1e40af",
-  "display": "browser",
+  "display": "standalone",
   "orientation": "any",
   "scope": "/",
   "start_url": "/",
   "icons": [
-    { "src": "/icons-192.png", "type": "image/png", "sizes": "192x192" },
-    { "src": "/icons-256.png", "type": "image/png", "sizes": "256x256" },
-    { "src": "/icons-512.png", "type": "image/png", "sizes": "512x512" }
+    { "src": "imageLaptop.webp", "type": "image/webp", "sizes": "192x192" },
+    { "src": "imageLaptop.webp", "type": "image/webp", "sizes": "256x256" },
+    { "src": "imageLaptop.webp", "type": "image/webp", "sizes": "512x512" }
   ]
 }
