--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     }
   },
   "dependencies": {
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "9.0.0-alpha.8",
     "@tailwindcss/postcss": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
